--- a/index.html
+++ b/index.html
@@ -15,13 +15,34 @@
     <section id="hero-image">
         <div class="contenedor">
             <img class="text-flicker-in-glow logo-hero " src="img/RECTUM BLANCO.PNG" alt="">
+            <a href="/" class="heartbeat bn16">TIKETS</a>
 
             <div class="redes-sociales">
-              <a href=""><i class='bx bxl-instagram'></i></a>
-              <a href=""><i class='bx bxl-youtube'></i></a>
-              <a href=""><i class='bx bxl-soundcloud'></i></a>
-              <a href=""><i class='bx bxl-spotify'></i> </a>
+                <a href=""><i class='bx bxl-instagram'></i></a>
+                <a href=""><i class='bx bxl-youtube'></i></a>
+                <a href=""><i class='bx bxl-soundcloud'></i></a>
+                <a href=""><i class='bx bxl-spotify'></i> </a>
             </div>
+        </div>
+    </section>
+    <section id="tiket-mapa">
+        <div class="containe-rtiket-mapa">
+            <div class="container-card">
+                <div class="wrapper">
+                    <div class="banner-image"> </div>
+                    <h2>La casa se reserva el derecho de admisión</h2>
+                    <p>Permiso Perdon y Gracias</p>
+                </div>
+                <div class="button-wrapper">
+                    <script src="https://www.mercadopago.com.ar/integrations/v1/web-payment-checkout.js"
+                        data-preference-id="174339528-9d56e4bf-e717-4bb9-b04d-02e2d988b25f" data-source="button">
+                  </script>
+                </div>
+            </div>
+            <div class=" container-card mapa">
+                <h2 style="text-align: center;">LOCATION</h2 >
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3104.11562173303!2d-69.17638658503175!3d-38.9213347059953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960c6fdcb083088d%3A0x3c762ad2b85813de!2sEl%20Mirador!5e0!3m2!1ses!2sar!4v1680852017773!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         </div>
     </section>
 
