my fukink first commit

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             
 
             <div class="redes-sociales">
-                <a href=""><i class='bx bxl-instagram'></i></a>
-                <a href=""><i class='bx bxl-youtube'></i></a>
+                <a href="https://www.instagram.com/rectum369/" target="_blank"><i class='bx bxl-instagram' target="_blank"></i></a>
+                <a href="https://www.youtube.com/@ectum3403" target="_blank"><i class='bx bxl-youtube' target="_blank"></i></a>
                 <a href=""><i class='bx bxl-soundcloud'></i></a>
                 <a href=""><i class='bx bxl-spotify'></i> </a>
             </div>
@@ -47,7 +47,9 @@
         </div>
         </div>
     </section>
-
+<section id="footer">
+   <a href="https://octopuswebdesign.com.ar/" target="_blank"> <p> Design by  <strong style="color: blueviolet;">Octopus®</strong></p> </a>
+</section>
 </body>
 
 </html>
