--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
             <div class="redes-sociales">
                 <a href="https://www.instagram.com/rectum369/" target="_blank"><i class='bx bxl-instagram' target="_blank"></i></a>
-                <a href="https://www.youtube.com/@ectum3403" target="_blank"><i class='bx bxl-youtube' target="_blank"></i></a>
-                <a href=""><i class='bx bxl-soundcloud'></i></a>
+                <a href="https://www.youtube.com/@rectum369" target="_blank"><i class='bx bxl-youtube' target="_blank"></i></a>
+                <a href="https://soundcloud.com/rectum369?ref=clipboard&p=i&c=1&si=7F5DB0AC67A64851AD71209E24172D37&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"  target="_blank"><i class='bx bxl-soundcloud'></i></a>
                 <a href=""><i class='bx bxl-spotify'></i> </a>
             </div>
         </div>
