--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="icon" type="image/png" href="img/logo-circulo.png">
+    <link rel="stylesheet" href="Trajan_Regular/Trajan Regular.ttf">
     <link rel="stylesheet" href="style.css">
     <title>RECTUM</title>
 </head>
@@ -15,6 +16,7 @@
     <section id="hero-image">
         <div class="contenedor">
             <img class="text-flicker-in-glow logo-hero " src="img/RECTUM BLANCO.PNG" alt="">
+            <h2 class="titulo">-2021-</h2> 
             <a href="#tiket-mapa" class="heartbeat bn16">TIKETS | LOCATION</a>
             
 
