--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="wrapper">
                     <h2 style="font-size: 17px;">PRÓXIMO EVENTO</h2>
                     <div class="banner-image"> </div>
-                    <a href="https://api.whatsapp.com/send?phone=2216003371&text=Hola,%20quiero%20comprar%20las%20entradas%20LOTE%201%20para%20el%20evento%20Dist%20by%20Rectum.%20%F0%9F%8E%AB"  target="_blank"><h2>ADQUIRIR ENTRADA</h2></a>
+                    <a href="https://api.whatsapp.com/send?phone=2216003371&text=Hola,%20quiero%20comprar%20las%20entradas%20para%20el%20evento%20Dist%20by%20Rectum.%20%F0%9F%8E%AB"  target="_blank"><h2>ADQUIRIR ENTRADA</h2></a>
                     <h2>La casa se reserva el derecho de admisión</h2>
                     <p>Permiso Perdon y Gracias</p>
                  
